syntax = "proto3";

                 package gameEventSeasonalQuestRelation;
service GameEventSeasonalQuestRelationService {
 rpc createGameEventSeasonalQuestRelation (GameEventSeasonalQuestRelationCreateInput) returns (GameEventSeasonalQuestRelation) {}
rpc gameEventSeasonalQuestRelations (findManyParams) returns (stream GameEventSeasonalQuestRelation) {}
rpc gameEventSeasonalQuestRelation (GameEventSeasonalQuestRelationWhereUniqueInput) returns (GameEventSeasonalQuestRelation) {}
rpc updateGameEventSeasonalQuestRelation (GameEventSeasonalQuestRelationUpdateInput) returns (GameEventSeasonalQuestRelation) {}
rpc deleteGameEventSeasonalQuestRelation (GameEventSeasonalQuestRelationWhereUniqueInput) returns (GameEventSeasonalQuestRelation) {} 
 }
message GameEventSeasonalQuestRelationCreateInput {
string createdAt = 1;
int32 eventEntry = 2;
string id = 3;
int32 questId = 4;
string updatedAt = 5;
};
message GameEventSeasonalQuestRelation {
string createdAt = 1;
int32 eventEntry = 2;
string id = 3;
int32 questId = 4;
string updatedAt = 5;
};
message GameEventSeasonalQuestRelationWhereUniqueInput {
string createdAt = 1;
int32 eventEntry = 2;
string id = 3;
int32 questId = 4;
string updatedAt = 5;
};
message GameEventSeasonalQuestRelationUpdateInput {
string createdAt = 1;
int32 eventEntry = 2;
string id = 3;
int32 questId = 4;
string updatedAt = 5;
};
message findManyParams {

};